--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,12 +6,54 @@ import Container from "./Container.astro";
 
 <header>
     <Container>
-        <div class="flex flex-wrap gap-y-2 gap-x-4 justify-end">
-            <nav class="flex gap-3">
-                <Link underline={false} href="/about"> About </Link>
-                <Link underline={false} href="/blog"> Blog </Link>
+        <div class="flex flex-wrap gap-y-2 gap-x-6 justify-end items-center">
+            <nav class="flex gap-4">
+                <Link href="/about"> About </Link>
+                <Link href="/blog"> Blog </Link>
             </nav>
-            <div>Button</div>
+            <button
+                id="toggleThemeButton"
+                aria-label="Toggle theme"
+                class="group cursor-pointer size-8 flex items-center justify-center rounded-full"
+            >
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="18"
+                    height="18"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="group-hover:stroke-white transition-colors duration-300 ease-in-out hidden dark:block"
+                >
+                    <circle cx="12" cy="12" r="5"></circle>
+                    <line x1="12" y1="1" x2="12" y2="3"></line>
+                    <line x1="12" y1="21" x2="12" y2="23"></line>
+                    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                    <line x1="1" y1="12" x2="3" y2="12"></line>
+                    <line x1="21" y1="12" x2="23" y2="12"></line>
+                    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                </svg>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="18"
+                    height="18"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="group-hover:stroke-black transition-colors duration-300 ease-in-out dark:hidden"
+                >
+                    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+                    ></path>
+                </svg>
+            </button>
         </div>
     </Container>
 </header>
